package gameLaby.laby;

import moteurJeu.Clavier;
import moteurJeu.Jeu;

import javax.swing.plaf.LabelUI;
import java.io.IOException;

public class LabyJeu implements Jeu {
    public static final int WIDTH = 600;
    public static final int HEIGHT = 800;
    public static final String FICHIER = "labySimple/laby2.txt";

    private final Labyrinthe labyrinthe;
    private boolean fin = false;

    public LabyJeu() throws IOException {
        labyrinthe = new Labyrinthe(FICHIER);
    }

    @Override
    public void update(double secondes, Clavier clavier) {
        if (clavier.droite) {
            labyrinthe.deplacerPerso(Labyrinthe.DROITE);
        }else if (clavier.gauche) {
            labyrinthe.deplacerPerso(Labyrinthe.GAUCHE);
        }else if (clavier.bas) {
            labyrinthe.deplacerPerso(Labyrinthe.BAS);
        }else if (clavier.haut) {
            labyrinthe.deplacerPerso(Labyrinthe.HAUT);
        }
        labyrinthe.verifierMonstre();
        etreFini();
        if (etreFini()&&!fin) {
            fin = true;
            System.out.println("Fin du jeu");
        }
    }

    @Override
    public void init() {}

    @Override
    public boolean etreFini() {
        boolean fin = false;
        if (labyrinthe.persos.get(0).getVie() <= 0)
            fin = true;
        return fin;
    }

    public Labyrinthe getLabyrinthe() {
        return labyrinthe;
    }
}
